# server/routes/authRoutes.js
@@ -3,12 +3,14 @@ const router = express.Router()
 const {
     userSignup, 
     userLogin, 
-    userLogout
+    userLogout,
+    forgotPassword
 } = require("../controllers/authController")
 const validateSignUp = require("../middlewares/authValidators")
   
 router.post("/signup", validateSignUp, userSignup)
 router.post("/login", userLogin)
 router.delete("/logout", userLogout)
+router.post("/forgotpassword", forgotPassword)
 
 module.exports = router
