# server/swagger_output.json
@@ -159,6 +159,43 @@
           }
         }
       }
+    },
+    "/api/auth/forgotpassword": {
+      "post": {
+        "tags": [
+          "Authentication"
+        ],
+        "description": "Handles forgot password operation for changing a registered user's password",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "example": "test-user@mail.com"
+                }
+              },
+              "required": [
+                "email"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
